# qvkeybd

./: Basic.qml  CMakeLists.txt  README.md  basic-b2qt.qml  main.cpp
mystyle/: mystyle.qrc  style.qml
